--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster
+FROM debian:bullseye-slim
 
 # Bitmessage environment varaibles
 ENV BITMESSAGE_HOME /usr/local/bitmessage
@@ -26,8 +26,26 @@ COPY ./install_packages.sh /home/bitchan/install_packages.sh
 RUN /bin/bash /home/bitchan/install_packages.sh
 
 # Upgrade pips
-RUN pip2 install --upgrade pip
-RUN pip3 install --upgrade pip
+RUN python2 -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip
+
+#
+# Tor
+#
+RUN mkdir -p /usr/local/tor
+RUN mkdir -p /usr/local/tor/bm
+RUN mkdir -p /usr/local/tor/cus
+RUN mkdir -p /usr/local/tor/rand
+RUN mkdir -p /usr/local/tor/authorized_clients/
+RUN chmod -R 700 /usr/local/tor
+RUN chown -R root /usr/local/tor
+
+RUN mkdir -p /root/.tor
+RUN chown -R root /root/.tor
+
+COPY docker/tor/torrc /etc/tor/torrc
+
+RUN echo "HashedControlPassword $(tor --quiet --hash-password torpass1234)" >> /etc/tor/torrc  # pass also in config.py
 
 #
 # Bitmessage
@@ -35,15 +53,18 @@ RUN pip3 install --upgrade pip
 
 # Bitmessage pip dependencies
 COPY ./requirements_bitmessage.txt /home/bitchan/requirements-bitmessage.txt
-RUN pip2 install -r /home/bitchan/requirements-bitmessage.txt
+RUN python2 -m pip install -r /home/bitchan/requirements-bitmessage.txt
 RUN rm -f /home/bitchan/requirements-bitmessage.txt
+
 # Run Bitmessage clone script (gets bitmessage)
 COPY ./docker/bitmessage_clone.sh ./bitmessage_clone.sh
 RUN /bin/bash /home/bitchan/bitmessage_clone.sh
 RUN rm -f /home/bitchan/bitmessage_clone.sh
+
 # Bitmessage pip dependencies and installation
-RUN pip2 install -r /home/bitchan/PyBitmessage/requirements.txt
+RUN python2 -m pip install -r /home/bitchan/PyBitmessage/requirements.txt
 RUN cd /home/bitchan/PyBitmessage && python2 setup.py install
+
 # Generate Bitmessage /usr/local/bitmessage/keys.dat)
 COPY ./docker/bitmessage_setup.sh ./bitmessage_setup.sh
 RUN /bin/bash /home/bitchan/bitmessage_setup.sh
@@ -55,7 +76,7 @@ RUN rm -f /home/bitchan/bitmessage_setup.sh
 
 # BitChan pip dependencies
 COPY ./requirements.txt /home/bitchan/requirements-bitchan.txt
-RUN pip3 install -r /home/bitchan/requirements-bitchan.txt
+RUN python3 -m pip install -r /home/bitchan/requirements-bitchan.txt
 RUN rm -f /home/bitchan/requirements-bitchan.txt
 
 # Install BitChan
