--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,15 +20,14 @@ services:
 
   bitchan_tor:
     container_name: bitchan_tor
+    image: app
     networks:
       bc_net:
         ipv4_address: 172.28.1.2
     restart: always
     build:
       context: ../
-      dockerfile: docker/tor/Dockerfile
-      args:
-        password: "torpass1234"  # also change TOR_PASS in config.py
+      dockerfile: docker/Dockerfile
     privileged: true
     volumes:
       - tor:/usr/local/tor
@@ -46,15 +45,12 @@ services:
       bc_net:
         ipv4_address: 172.28.1.3
     restart: always
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile
     volumes:
       - bitchan:/usr/local/bitchan
       - bitmessage:/usr/local/bitmessage
       - /etc/localtime:/etc/localtime:ro  # Use timezone of the host (read-only)
     privileged: true
-    cpuset: '1,2,3'
+    cpuset: '1,2'
     command: >
       bash -c "/home/bitchan/docker/bitmessage_setup.sh &&
                /home/bitchan/database/upgrade_database.sh &&
@@ -78,14 +74,12 @@ services:
       - tor_etc:/etc/tor
       - var_lock:/var/lock
       - run_vol:/run
-      - i2p:/i2p/.i2p
-      - i2psnark:/i2psnark
       - /usr/bin/df:/usr/bin/df-host  # Change to the location of df on host system
       - /var/run/docker.sock:/var/run/docker.sock:ro  # For bitchan to control docker containers
       - /etc/localtime:/etc/localtime:ro  # Use timezone of the host (read-only)
     privileged: true
     cpuset: '0'
-    command: gunicorn --workers 1 --worker-class gthread --threads 4 --timeout 1800 --bind unix:/run/bitchan.sock bitchan_flask:app
+    command: python3 -m gunicorn --workers 1 --worker-class gthread --threads 4 --timeout 1800 --bind unix:/run/bitchan.sock bitchan_flask:app
     depends_on:
       - bitchan_bitmessage
 
@@ -103,8 +97,6 @@ services:
       - tor:/usr/local/tor
       - tor_etc:/etc/tor
       - var_lock:/var/lock
-      - i2p:/i2p/.i2p
-      - i2psnark:/i2psnark
       - /var/run/docker.sock:/var/run/docker.sock:ro  # For bitchan to control docker containers
       - /etc/localtime:/etc/localtime:ro  # Use timezone of the host (read-only)
     privileged: true
@@ -113,28 +105,27 @@ services:
     depends_on:
       - bitchan_flask
 
-  # You can comment out the following block to prevent the i2p service from starting
-  # After starting for the first time, navigate to http://172.28.1.6:7657 and complete the setup.
+  # You can comment out the following block to prevent i2pd from starting
   # If your docker is publicly-accessible, you can uncomment the ports section and allow remote access (at http://publicIP:7999).
   # If public, it's recommended to:
-  #  1. Immediately create a user and password in the i2p router console UI configuration page, then restart the service.
-  #  2. Remove port 7999 after configuring
+  #  1. Change the user/password in i2pd.conf before building.
+  #  2. Comment port 7999 after using the webconsole to prevent access to it.
   # See the manual for setting up an i2p hidden service to host your BitChan kiosk.
+  # If rebuilding I2P from scratch, delete I2P volume: docker volume rm docker_i2pd
   bitchan_i2p:
     container_name: bitchan_i2p
-    image: geti2p/i2p
     networks:
       bc_net:
         ipv4_address: 172.28.1.6
     restart: always
+    build:
+      context: ../
+      dockerfile: docker/i2pd/Dockerfile
     volumes:
-      - i2p:/i2p/.i2p
-      - i2psnark:/i2psnark
+      - i2pd:/home/i2pd/data
     cpuset: '0'
 #    ports:
-#      - "7999:7657"  # UI port
-#      - "12345:12345"  # UDP port (change and set in Settings/Network)
-#      - "12345:12345"  # TCP port (change and set in Settings/Network)
+#      - "7999:7070"  # Console UI port
 
 volumes:
   run_vol:
@@ -146,8 +137,7 @@ volumes:
   flask_session:
   tor:
   tor_etc:
-  i2p:
-  i2psnark:
+  i2pd:
   var_lock:
 
 networks:
