--- a/requirements_bitmessage.txt
+++ b/requirements_bitmessage.txt
@@ -1,3 +1,3 @@
-jsonrpclib==0.1.7
-msgpack==1.0.2
+jsonrpclib==0.1.7  # python2 support stops at 0.1.7, don't upgrade until Bitmessage moves to python3
+msgpack==1.0.3
 stdeb==0.10.0
