--- a/docker/minode/Dockerfile
+++ b/docker/minode/Dockerfile
@@ -1,25 +1,22 @@
 FROM python:3.11-alpine
 
-ENV MINODE_HOME="/home/minode"
-ENV DATA_DIR="${MINODE_HOME}/minode_data"
-ARG GIT_BRANCH="v0.3"
-ENV GIT_BRANCH=${GIT_BRANCH}
-ARG GIT_COMMIT="82d5deec57c8b07ee056df2d27a79236fdce054c"
-ENV GIT_COMMIT=${GIT_COMMIT}
-ARG REPO_URL="https://git.bitmessage.org/Bitmessage/MiNode.git"
-ENV REPO_URL=${REPO_URL}
+ENV MINODE_HOME="/home/minode" \
+    DATA_DIR="/home/minode/minode_data" \
+    GIT_BRANCH="v0.3" \
+    GIT_COMMIT="82d5deec57c8b07ee056df2d27a79236fdce054c" \
+    REPO_URL="https://git.bitmessage.org/Bitmessage/MiNode.git"
 
-RUN mkdir -p "$MINODE_HOME" \
-    && mkdir -p "$MINODE_HOME/minode_data" \
-    && adduser -S -h "$MINODE_HOME" minode
+RUN mkdir -p "$MINODE_HOME" && \
+  mkdir -p "$MINODE_HOME/minode_data" && \
+  adduser -S -h "$MINODE_HOME" minode
 
-RUN apk update \
-    && apk --no-cache --virtual build-dependendencies add git \
-    && git clone --progress --verbose -b ${GIT_BRANCH} ${REPO_URL} /tmp/minode \
-    && cd /tmp/minode \
-    && git checkout ${GIT_COMMIT} \
-    && mv /tmp/minode/* /home/minode/ \
-    && apk --no-cache --purge del build-dependendencies
+RUN apk update && \
+  apk --no-cache --virtual build-dependendencies add git && \
+  git clone --progress --verbose -b ${GIT_BRANCH} ${REPO_URL} /tmp/minode && \
+  cd /tmp/minode && \
+  git checkout ${GIT_COMMIT} && \
+  mv /tmp/minode/* "$MINODE_HOME/" && \
+  apk --no-cache --purge del build-dependendencies
 
 # Current
 # 0.3.3 82d5deec57c8b07ee056df2d27a79236fdce054c fixed i2p host issue
